--- a/src/css/build.css
+++ b/src/css/build.css
@@ -18,3 +18,29 @@ canvas.fade-in {
 canvas.fade-out {
   opacity: 0.6;
 }
+
+#root {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  cursor: pointer;
+}
+
+#play-icon {
+  position: fixed;
+  top: calc(50% - 60px);
+  left: calc(50% - 60px);
+  width: 120px;
+  height: 120px;
+  fill: black;
+  z-index: 1;
+  opacity: 1;
+  transition: opacity 0.5516s;
+}
+
+#play-icon.fade-out {
+  opacity: 0;
+}
